Verificación token mejorada

--- a/src/components/forms/FormLogin.astro
+++ b/src/components/forms/FormLogin.astro
@@ -33,7 +33,7 @@ import "src/styles/forms.css";
 	</p>
 </div>
 
-<p class="form__error-send">El usuario no existe</p>
+<p class="form__error-send"></p>
 
 <div class="form__group">
 	<BtnColor text="INGRESAR" type="form" />
