--- a/src/pages/fondo.astro
+++ b/src/pages/fondo.astro
@@ -5,20 +5,28 @@ import FundData from "@components/FundData.astro";
 
 import "@styles/main-content.css";
 
-if (!Astro.cookies.get("jwt")) {
+if (!Astro.cookies.has("jwt")) {
     return Astro.redirect("/");
 }
 
 import { GetToken } from "src/scripts/usersAPI";
 
-const token = Astro.cookies.get("jwt").value;
-const response = await GetToken(token);
-const hasFondo = response.fund;
+let hasFund;
+
+if (!Astro.cookies.has("dataToken")) {
+    const token = Astro.cookies.get("jwt").value;
+    const response = await GetToken(token);
+    Astro.cookies.set("dataToken", response);
+    hasFund = response.fund;
+}
+
+const token = Astro.cookies.get("dataToken").value;
+hasFund = JSON.parse(token).fund;
 ---
 
 <Layout title="BrokerView | Fondo" hasFooter={false}>
     <MenuToggle />
     <main>
-        {hasFondo ? <FundData /> : <h1>Su cuenta no tiene este recurso</h1>}
+        {hasFund ? <FundData /> : <h1>Su cuenta no tiene este recurso</h1>}
     </main>
 </Layout>
