Mejoras en la respuesta de formularios

--- a/src/components/forms/FormSignin.astro
+++ b/src/components/forms/FormSignin.astro
@@ -29,7 +29,7 @@ import "src/styles/forms.css";
     textError="Las contraseñas no coinciden"
 />
 
-<p class="form__error-send">Su nombre no se encuentra registrado</p>
+<p class="form__error-send"></p>
 
 <div class="form__group">
     <BtnColor text="INGRESAR" type="form" />
