--- a/src/pages/broker.astro
+++ b/src/pages/broker.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "@layouts/Layout.astro";
 import MenuToggle from "@sections/MenuToggle.astro";
-import BrokerData from "@components/BrokerData.astro";
+import BrokerData from "@components/data/BrokerData.astro";
 
 import "@styles/main-content.css";
 
