--- a/src/pages/cuenta.astro
+++ b/src/pages/cuenta.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "@layouts/Layout.astro";
 import MenuToggle from "@sections/MenuToggle.astro";
-import DataAccount from "@components/DataAccount.astro";
+import DataAccount from "@components/data/DataAccount.astro";
 
 import "@styles/main-content.css";
 
