--- a/src/pages/fondo.astro
+++ b/src/pages/fondo.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "@layouts/Layout.astro";
 import MenuToggle from "@sections/MenuToggle.astro";
-import FundData from "@components/FundData.astro";
+import FundData from "@components/data/FundData.astro";
 
 import "@styles/main-content.css";
 
