--- a/src/styles/main-content.css
+++ b/src/styles/main-content.css
@@ -2,6 +2,8 @@ main{
     --margin-close: 49px;
     --margin-open: 200px;
 
+    position: relative;
+
     margin-left: var(--margin-close);
     transition: margin-left .15s ease;
 
