--- a/src/components/BtnColor.astro
+++ b/src/components/BtnColor.astro
@@ -61,6 +61,7 @@ const isForm = type == 'form'
             }
         }
         &#disable{
+            color: transparent;
             pointer-events: none;
 
             body.red & {
