--- a/src/components/data/FundData.astro
+++ b/src/components/data/FundData.astro
@@ -16,7 +16,8 @@ import ContainerLoaderIcon from "@components/loader/ContainerLoaderIcon.astro";
 
     h1 {
       text-align: center;
-      margin: 1rem;
+      margin-top: 1rem;
+      margin-bottom: 2rem;
     }
     div {
       height: 70vh;
