--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -23,6 +23,7 @@ if (Astro.cookies.get("jwt")) {
 </Layout>
 <style>
     h1 {
-		margin: 2.5rem;
+		margin-bottom: 2.5rem;
+        margin-top: 4.5rem;
 	}
 </style>
