Componente tableFund agregado

--- a/src/components/BackgroundColors.astro
+++ b/src/components/BackgroundColors.astro
@@ -67,6 +67,11 @@ const { type } = Astro.props;
         &.data-account{
             margin: auto;
         }
+        &.table-fund{
+            height: auto;
+            margin: auto;
+            margin-bottom: 4rem;
+        }
 
         &::before{
             content: "";
