--- a/src/components/ModalLogout.astro
+++ b/src/components/ModalLogout.astro
@@ -15,7 +15,7 @@ import BackgroundColors from "@components/BackgroundColors.astro";
 </div>
 <style>
     .background-modal {
-        position: absolute;
+        position: fixed;
         top: -55px;
 
         display: none;
