Mayor modularización en componentes .astro

--- a/src/components/BtnTheme.astro
+++ b/src/components/BtnTheme.astro
@@ -1,5 +1,5 @@
 ---
-import IconForm from "@components/IconForm.astro";
+import IconForm from "@components/forms/IconForm.astro";
 ---
 
 <div id="btnTheme__box" transition:persist>
