--- a/src/components/TitlesWelcome.astro
+++ b/src/components/TitlesWelcome.astro
@@ -5,7 +5,7 @@ const hourMorning = 0;
 const hourAfternoon = 12;
 const hourNight = 18;
 
-let text;
+let text: String;
 
 if (timeNow < hourAfternoon && timeNow >= hourMorning) text = "Buenos dias";
 else if (timeNow >= hourAfternoon && timeNow < hourNight)
