--- a/src/components/forms/FormLogin.astro
+++ b/src/components/forms/FormLogin.astro
@@ -1,6 +1,6 @@
 ---
 import BtnColor from "@components/BtnColor.astro";
-import IconPassword from "@components/IconPassword.astro";
+import IconPassword from "@components/forms/IconPassword.astro";
 
 import "src/styles/forms.css";
 ---
