--- a/src/components/forms/IconPassword.astro
+++ b/src/components/forms/IconPassword.astro
@@ -53,15 +53,18 @@
     const $passwordIcons = document.querySelectorAll(".password_icon");
 
     // Show text in input passwords
-    const showPassword = (icon, inputPassword) => {
+    function showPassword(icon: HTMLElement, inputPassword: HTMLInputElement) {
         icon.classList.toggle("show");
         if (inputPassword.type === "password") inputPassword.type = "text";
         else inputPassword.type = "password";
-    };
+    }
 
     $passwordIcons.forEach((icon) => {
         icon.addEventListener("click", () => {
-            showPassword(icon, icon.previousElementSibling);
+            showPassword(
+                icon as HTMLElement,
+                icon.previousElementSibling as HTMLInputElement,
+            );
         });
     });
 </script>
