--- a/src/pages/broker.astro
+++ b/src/pages/broker.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "@layouts/Layout.astro";
-import MenuToggle from "@sections/MenuToggle.astro";
+import MenuToggle from "@components/menu_toggle/MenuToggle.astro";
 import BrokerData from "@components/data/BrokerData.astro";
 
 import "@styles/main-content.css";
