--- a/src/components/BrokerLogo.astro
+++ b/src/components/BrokerLogo.astro
@@ -1,32 +1,32 @@
 ---
-import '@fontsource/audiowide';
+import "@fontsource/audiowide";
 ---
 
 <div>
     <img
-    class=`icon`
-    src="/src/icons/BrokerLogo.webp"
-    alt="icono"
-    width="30"
-    height="30"
-/>
+        class="icon"
+        src="/src/icons/BrokerLogo.webp"
+        alt="icono"
+        width="30"
+        height="30"
+    />
     <h3>BrokerView</h3>
 </div>
 <style>
-    div{
+    div {
         display: flex;
         align-items: center;
         user-select: none;
         height: 100%;
-    h3{
-        font-family: 'Audiowide', system-ui;
+        h3 {
+            font-family: "Audiowide", system-ui;
 
-        font-weight: 100;
-        color: var(--text-color-light);
+            font-weight: 100;
+            color: var(--text-color-light);
+        }
     }
-}
-    html.light{
-        h3{
+    html.light {
+        h3 {
             color: var(--text-color-dark);
         }
     }
