--- a/src/components/menu_toggle/MenuToggle.astro
+++ b/src/components/menu_toggle/MenuToggle.astro
@@ -1,6 +1,6 @@
 ---
-import LinkPage from "@components/LinkPage.astro";
-import ModalLogout from "@components/ModalLogout.astro";
+import LinkPage from "@components/menu_toggle/LinkPage.astro";
+import ModalLogout from "@components/menu_toggle/ModalLogout.astro";
 ---
 
 <div id="background__menu-toggle"></div>
@@ -67,7 +67,7 @@ import ModalLogout from "@components/ModalLogout.astro";
         >
     </LinkPage>
 </aside>
-<ModalLogout/>
+<ModalLogout />
 
 <style>
     #background__menu-toggle {
@@ -93,8 +93,8 @@ import ModalLogout from "@components/ModalLogout.astro";
         flex-direction: column;
 
         left: -100%;
-        transition: transform .5s ease;
-        
+        transition: transform 0.5s ease;
+
         padding-top: 2rem;
         padding-bottom: 1rem;
         padding-left: 1rem;
@@ -135,10 +135,10 @@ import ModalLogout from "@components/ModalLogout.astro";
             }
         }
         #menu-toggle {
-            left: 0; 
+            left: 0;
 
             width: 50px;
-            transition: width .1s ease;
+            transition: width 0.1s ease;
 
             padding-left: 5px;
             padding-top: 1rem;
