Diseño responsive mejorado

--- a/src/components/BackgroundColors.astro
+++ b/src/components/BackgroundColors.astro
@@ -69,8 +69,8 @@ const { type } = Astro.props;
         }
         &.table-fund{
             height: auto;
-            margin: auto;
-            margin-bottom: 5.5rem;
+            margin: 1rem auto;
+            flex: 1;
         }
 
         &::before{
