--- a/src/components/fund_data/TitlesFundData.astro
+++ b/src/components/fund_data/TitlesFundData.astro
@@ -1,4 +1,4 @@
-<section id="titles-fund-data">
+<article id="titles-fund-data">
     <div>
         <h3>Total ganancias</h3>
         <p id="profits"></p>
@@ -7,7 +7,7 @@
         <h3>Total aportes</h3>
         <p id="contributions"></p>
     </div>
-</section>
+</article>
 
 <style>
     #titles-fund-data {
@@ -17,7 +17,8 @@
 
         height: auto;
         width: 97%;
-        margin: 2.5rem auto;
+
+        margin: 2rem auto;
 
         div {
             display: flex;
@@ -57,8 +58,8 @@
                 h3 {
                     font-size: 1rem;
                 }
-                p{
-                    font-size: .9rem;
+                p {
+                    font-size: 0.9rem;
                 }
             }
         }
