--- a/src/components/fund_data/TableFund.astro
+++ b/src/components/fund_data/TableFund.astro
@@ -25,13 +25,11 @@ import BackgroundColors from "@components/BackgroundColors.astro";
         font-size: 2rem;
         font-weight: 100;
 
-        margin-top: 5.5rem;
-        margin-bottom: 2.5rem;
+        margin: 2.5rem 0;
     }
     div {
         width: 95%;
-        margin: auto;
-        margin-bottom: 2rem;
+        margin: 0 auto;
 
         display: flex;
         justify-content: end;
@@ -57,6 +55,7 @@ import BackgroundColors from "@components/BackgroundColors.astro";
         grid-auto-rows: 50px;
 
         width: 100%;
+        height: 100%;
         z-index: 1;
 
         padding: 1rem;
