Charts Broker agregados

--- a/src/components/BtnColor.astro
+++ b/src/components/BtnColor.astro
@@ -18,6 +18,7 @@ const isForm = type == 'form'
         font-family: inherit;
         letter-spacing: 1.5px;
         cursor: pointer;
+        user-select: none;
 
         width: 90%;
         margin: auto;
