--- a/src/components/fund/TableFund.astro
+++ b/src/components/fund/TableFund.astro
@@ -48,7 +48,7 @@ import BackgroundColors from "@components/BackgroundColors.astro";
             }
         }
     }
-    ul {
+    ul#table-fund {
         display: grid;
         grid-template-columns: repeat(5, minmax(50px, 1fr));
         grid-template-rows: 50px;
