--- a/src/components/fund/TitlesFundData.astro
+++ b/src/components/fund/TitlesFundData.astro
@@ -10,7 +10,7 @@
 </article>
 
 <style>
-    #titles-fund-data {
+    article#titles-fund-data {
         display: flex;
         justify-content: space-between;
         gap: 0.8rem;
@@ -46,6 +46,7 @@
 
                 color: inherit;
             }
+
             p {
                 text-align: center;
                 letter-spacing: 0.5px;
@@ -53,7 +54,7 @@
         }
     }
     @media (width < 500px) {
-        #titles-fund-data {
+        article#titles-fund-data {
             div {
                 h3 {
                     font-size: 1rem;
