--- a/src/components/fund/FundData.astro
+++ b/src/components/fund/FundData.astro
@@ -20,6 +20,7 @@ import TitlesFundData from "@components/fund/TitlesFundData.astro";
   fund-data {
     width: 98.5%;
     height: auto;
+    position: relative;
 
     h1 {
       text-align: center;
