--- a/src/components/loader/ContainerLoaderIcon.astro
+++ b/src/components/loader/ContainerLoaderIcon.astro
@@ -17,11 +17,11 @@ import LoaderIcon from "@components/loader/LoaderIcon.astro";
             opacity: 0;
         }
     }
-    #loader-container {
+    div#loader-container {
         position: fixed;
-        top: 56px;
+        top: 0;
 
-        height: 99vh;
+        height: 101vh;
         width: 99%;
 
         display: flex;
