--- a/src/sections/Navbar.astro
+++ b/src/sections/Navbar.astro
@@ -21,7 +21,7 @@ const { hasFooter } = Astro.props;
 </BackgroundColors>
 
 <style>
-    .navBar {
+    nav.navBar {
         display: flex;
         justify-content: space-between;
         align-items: center;
